<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/orange">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/login_cardview"
        style="@style/Theme.PizzaCrew.Login.CardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/login_horizontal_margin"
        android:padding="5dp"
        app:layout_constrainedHeight="true"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <com.google.android.material.textview.MaterialTextView
                style="@style/Theme.PizzaCrew.Login.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/login_fields_title" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_username_input_layout"
                style="@style/Theme.PizzaCrew.Login.Fields.Username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/login_fields_username">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Theme.PizzaCrew.Login.EditText.Username"
                    android:layout_width="match_parent"
                    android:text="hello"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:lines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_password_input_layout"
                style="@style/Theme.PizzaCrew.Login.Fields.Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/login_fields_password">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Theme.PizzaCrew.Login.EditText.Password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:nextFocusDown="@id/login_go_button"
                    android:nextFocusForward="@id/login_go_button" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_create_account_button"
                style="@style/Theme.PizzaCrew.TextButton.Login.CreateAccount"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/login_create_account"
                android:textAllCaps="false" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_go_button"
        style="@style/Theme.PizzaCrew.RoundButton.Login.Go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/login_login_button"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_cardview" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/login_progress_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/login_go_button"
        app:layout_constraintEnd_toEndOf="@id/login_go_button"
        app:layout_constraintStart_toStartOf="@id/login_go_button"
        app:layout_constraintTop_toTopOf="@id/login_go_button" />


</androidx.constraintlayout.widget.ConstraintLayout>